--- a/SHPDiagnosticsViewer/ProjectDataPreviewWindow.xaml
+++ b/SHPDiagnosticsViewer/ProjectDataPreviewWindow.xaml
@@ -17,55 +17,56 @@
 
     <TabControl Grid.Row="1">
       <TabItem Header="Diagnostics Mapping">
-        <DataGrid ItemsSource="{Binding DiagnosticsMapping}"
-                  AutoGenerateColumns="False"
-                  IsReadOnly="True"
-                  HeadersVisibility="Column"
-                  CanUserAddRows="False">
-          <DataGrid.Columns>
-            <DataGridTextColumn Header="DeviceId" Binding="{Binding DeviceId}" Width="80" />
-            <DataGridTextColumn Header="DeviceName" Binding="{Binding DeviceName}" Width="*" />
-            <DataGridTextColumn Header="RTI" Binding="{Binding RtiAddress}" Width="60" />
-            <DataGridTextColumn Header="PageId" Binding="{Binding PageId}" Width="70" />
-            <DataGridTextColumn Header="PageName" Binding="{Binding PageName}" Width="*" />
-          </DataGrid.Columns>
-        </DataGrid>
-      </TabItem>
+        <ScrollViewer VerticalScrollBarVisibility="Auto">
+          <StackPanel>
+            <TextBlock Text="Device Page Mapping" Margin="0,0,0,6" FontWeight="SemiBold" />
+            <DataGrid ItemsSource="{Binding DiagnosticsMapping}"
+                      AutoGenerateColumns="False"
+                      IsReadOnly="True"
+                      HeadersVisibility="Column"
+                      CanUserAddRows="False"
+                      Height="180">
+              <DataGrid.Columns>
+                <DataGridTextColumn Header="DeviceId" Binding="{Binding DeviceId}" Width="80" />
+                <DataGridTextColumn Header="DeviceName" Binding="{Binding DeviceName}" Width="*" />
+                <DataGridTextColumn Header="PageNumber" Binding="{Binding PageNumber}" Width="90" />
+                <DataGridTextColumn Header="PageName" Binding="{Binding PageName}" Width="*" />
+              </DataGrid.Columns>
+            </DataGrid>
 
-      <TabItem Header="Project Report">
-        <DataGrid ItemsSource="{Binding ProjectReport}"
-                  AutoGenerateColumns="False"
-                  IsReadOnly="True"
-                  HeadersVisibility="Column"
-                  CanUserAddRows="False">
-          <DataGrid.Columns>
-            <DataGridTextColumn Header="Type" Binding="{Binding EntityType}" Width="120" />
-            <DataGridTextColumn Header="PrimaryId" Binding="{Binding PrimaryId}" Width="90" />
-            <DataGridTextColumn Header="SecondaryId" Binding="{Binding SecondaryId}" Width="100" />
-            <DataGridTextColumn Header="TertiaryId" Binding="{Binding TertiaryId}" Width="100" />
-            <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*" />
-            <DataGridTextColumn Header="Detail" Binding="{Binding Detail}" Width="*" />
-          </DataGrid.Columns>
-        </DataGrid>
-      </TabItem>
+            <TextBlock Text="Driver Config Map" Margin="0,12,0,6" FontWeight="SemiBold" />
+            <DataGrid ItemsSource="{Binding DriverConfigEntries}"
+                      AutoGenerateColumns="False"
+                      IsReadOnly="True"
+                      HeadersVisibility="Column"
+                      CanUserAddRows="False"
+                      Height="180">
+              <DataGrid.Columns>
+                <DataGridTextColumn Header="DriverDeviceId" Binding="{Binding DriverDeviceId}" Width="110" />
+                <DataGridTextColumn Header="DeviceName" Binding="{Binding DeviceName}" Width="*" />
+                <DataGridTextColumn Header="DisplayName" Binding="{Binding DeviceDisplayName}" Width="*" />
+                <DataGridTextColumn Header="Key" Binding="{Binding Key}" Width="160" />
+                <DataGridTextColumn Header="Value" Binding="{Binding Value}" Width="*" />
+                <DataGridTextColumn Header="VariableName" Binding="{Binding ResolvedVariableName}" Width="*" />
+              </DataGrid.Columns>
+            </DataGrid>
 
-      <TabItem Header="Project Test">
-        <DataGrid ItemsSource="{Binding ProjectTest}"
-                  AutoGenerateColumns="False"
-                  IsReadOnly="True"
-                  HeadersVisibility="Column"
-                  CanUserAddRows="False">
-          <DataGrid.Columns>
-            <DataGridTextColumn Header="DeviceId" Binding="{Binding DeviceId}" Width="80" />
-            <DataGridTextColumn Header="DeviceName" Binding="{Binding DeviceName}" Width="*" />
-            <DataGridTextColumn Header="SourceIdx" Binding="{Binding SourceLabelIndex}" Width="90" />
-            <DataGridTextColumn Header="PageId" Binding="{Binding PageId}" Width="70" />
-            <DataGridTextColumn Header="PageName" Binding="{Binding PageName}" Width="*" />
-            <DataGridTextColumn Header="ButtonId" Binding="{Binding ButtonId}" Width="80" />
-            <DataGridTextColumn Header="TagId" Binding="{Binding ButtonTagId}" Width="70" />
-            <DataGridTextColumn Header="ButtonText" Binding="{Binding ButtonText}" Width="*" />
-          </DataGrid.Columns>
-        </DataGrid>
+            <TextBlock Text="System Variable Map" Margin="0,12,0,6" FontWeight="SemiBold" />
+            <DataGrid ItemsSource="{Binding SysVarRefMapEntries}"
+                      AutoGenerateColumns="False"
+                      IsReadOnly="True"
+                      HeadersVisibility="Column"
+                      CanUserAddRows="False"
+                      Height="180">
+              <DataGrid.Columns>
+                <DataGridTextColumn Header="SysVarRef" Binding="{Binding SysVarRef}" Width="*" />
+                <DataGridTextColumn Header="DriverDeviceId" Binding="{Binding DriverDeviceId}" Width="120" />
+                <DataGridTextColumn Header="DeviceId" Binding="{Binding DeviceId}" Width="90" />
+                <DataGridTextColumn Header="VariableName" Binding="{Binding VariableName}" Width="*" />
+              </DataGrid.Columns>
+            </DataGrid>
+          </StackPanel>
+        </ScrollViewer>
       </TabItem>
     </TabControl>
 
